--- a/Sesion-07/Reto-04/apply.ipynb
+++ b/Sesion-07/Reto-04/apply.ipynb
@@ -36,50 +36,13 @@
    "source": [
     "df_reto_4 ="
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pídele a tu experta la función de verificación `revisar_aplicacion` (encontrada en el archivo `helpers.py` de la carpeta donde se encuentra este Reto), pégala debajo y corre la celda para verificar tu resultado:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pega aquí la función de verificación\n",
-    "\n",
-    "revisar_aplicacion(df_reto_4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary>Solución</summary>\n",
-    "\n",
-    "```python\n",
-    "df = pd.read_csv('../../Datasets/near_earth_objects-jan_feb_1995-dirty.csv', index_col=0)\n",
-    "def proportion_of_value_to_earths_diameter(value):\n",
-    "    \n",
-    "    diameter_of_earth_in_metres = 12742000\n",
-    "    return value / diameter_of_earth_in_metres\n",
-    "df['proportion_of_max_diameter_to_earth'] = df['estimated_diameter.meters.estimated_diameter_max'].apply(proportion_of_value_to_earths_diameter)\n",
-    "df_reto_4 = df.copy()\n",
-    "```\n",
-    "    \n",
-    "</details>"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -91,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
